Добавляет правки к защите 3

--- a/catalog.html
+++ b/catalog.html
@@ -158,7 +158,7 @@
             <form class="filters-form" action="https://echo.htmlacademy.ru/" method="get">
               <fieldset class="filters-group">
                 <legend class="filters-group-title">Сортировка:</legend>
-                <select class="select-control" aria-label="Сортировка">
+                <select class="select-control" aria-label="Сортировка" name="sorting">
                   <option value="popular">по популярности</option>
                   <option value="price">по цене</option>
                 </select>
